[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usb4431-monitor"
version = "0.1.0"
description = "USB-4431 post-trigger interval mean drift monitor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0,<3",
  "nidaqmx>=1.0,<2",
  "pywebview>=5.3,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pyinstaller>=6.10,<7",
]

[project.scripts]
usb4431-monitor = "usb4431_monitor.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
usb4431_monitor = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

